Add 'uninstalled' status to events and client view

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -235,6 +235,8 @@
         "error_plural": "__count__ Munki errors",
         "package_installed": "__pkg__ installed",
         "package_installed_plural": "__count__ packages installed",
+        "package_uninstalled": "__pkg__ uninstalled",
+        "package_uninstalled_plural": "__count__ packages uninstalled",
         "warning": "Munki warning: __warning__",
         "warning_plural": "__count__ Munki warnings"
     },
