--- a/app/modules/caching/locales/en.json
+++ b/app/modules/caching/locales/en.json
@@ -14,6 +14,7 @@
     "bytes_served": "Caching – Bytes Served",
     "client_requests": "Requests From Clients",
     "client_tab_title": "Caching Server",
+    "purgedbytes": "Purged Bytes",
     "date": "Date",
     "from_cache": "From Cache",
     "from_origin": "From Origin",
