--- a/app/modules/certificate/locales/en.json
+++ b/app/modules/certificate/locales/en.json
@@ -4,11 +4,11 @@
     "expired": "Expired",
     "expiration_date": "Expiration Date",
     "expires": "Expires",
+    "ok": "3 Months +",
     "issuer": "Issuer",
     "location": "Location",
     "nocertificate": "No Certificate",
-    "ok": "Valid for more than three months",
     "report_title": "Certificate Report",
-    "soon": "Expires within three months",
+    "soon": "< 3 Months",
     "title": "Certificates"
 }
