--- a/app/modules/certificate/locales/fr.json
+++ b/app/modules/certificate/locales/fr.json
@@ -7,8 +7,8 @@
     "issuer": "Issuer",
     "location": "Location",
     "nocertificate": "No Certificate",
-    "ok": "Valable pour plus de trois mois",
+    "ok": "Valable pour plus de un mois",
     "report_title": "Rapport Certificats",
-    "soon": "Expire dans les trois mois",
+    "soon": "Expire dans les un mois",
     "title": "Certificats"
 }
