Update fr.json - Add allow_url_fopen

--- a/assets/locales/fr.json
+++ b/assets/locales/fr.json
@@ -297,6 +297,7 @@
     "path": "Chemin",
     "pending": "En attente",
     "php": {
+		"allow_url_fopen": "Accès distant à l'URL",
         "dom": "Extension DOM",
         "moreinfo": "Infos PHP avancées",
         "pdo": "Extension PDO",
