--- a/app/modules/caching/locales/fr.json
+++ b/app/modules/caching/locales/fr.json
@@ -11,9 +11,14 @@
     "bytespurgedyoungerthan1day": "Octets purgés de moins d'un jour",
     "bytespurgedyoungerthan7days": "Octets purgés de moins de 7 jours",
     "bytespurgedyoungerthan30days": "Octets purgés de moins de 30 jours",
+    "bytes_served": "Cache – Bytes Servis",
     "client_requests": "Demandes des clients",
     "client_tab_title": "Mise en cache du serveur",
+"purgedbytes": "Bytes purgés",
     "date": "Date",
+"from_cache": "Depuis Cache",
+    "from_origin": "Depuis l'origine",
+    "from_peers": "Depuis leur peers",
     "importsbyhttp": "Imports par HTTP",
     "importsbyxpc": "Imports par XPC",
     "listing_title": "Mise en cache",
@@ -23,7 +28,7 @@
     "purged_30": "Purgés de moins de 30 jours",
     "repliesfromcachetoclients": "Réponses depuis le cache vers les clients",
     "repliesfromcachetopeers": "Réponses depuis le cache vers peers",
-    "repliesfrompeerstoclients": "Réponses depiuis peers vers les clients",
+    "repliesfrompeerstoclients": "Réponses depuis peers vers les clients",
     "repliesfromorigintoclients": "Réponse depuis l'origine vers les clients",
     "repliesfromorigintopeers": "Réponses depuis l'origine vers les peers",
     "reporttitle": "Rapport mise en cache du serveur",
