--- a/app/modules/fonts/locales/en.json
+++ b/app/modules/fonts/locales/en.json
@@ -10,7 +10,7 @@
     "trademark": "Trademark",
     "vendor": "Vendor",
     "copyright": "Copyright",
-    "description": "Discription",
+    "description": "Description",
     "designer": "Designer",
     "clienttab": "Fonts",
     "reporttitle": "Fonts Report",
