--- a/app/modules/power/locales/fr.json
+++ b/app/modules/power/locales/fr.json
@@ -1,64 +1,65 @@
 {
-    "ac_power": "AC Power",
-    "active_profile": "Active Power Profile",
-    "acwake": "AC Wake",
-    "adapter": "Power Adapter",
-    "adapter_id": "Adapter ID",
-    "adapter_serial_number": "Adapter Serial Number",
-    "adapter_wattage": "Adapter Wattage",
-    "amperage": "Amperage",
-    "amps": "Amps",
-    "applepushservicetask": "Apple Push Service Task",
-    "assertions": "Power Assertions",
-    "auto_gpu": "Automatic",
-    "autopoweroff": "Auto Power Off",
-    "autopoweroffdelay": "Auto Power Off Delay",
-    "autorestart": "Auto Restart",
-    "avgtimetoempty": "Estimated Average Time To Empty",
-    "avgtimetofull": "Average Time to Full",
-    "backgroundtask": "Background Task",
-    "battery": "Battery",
-    "battery_level": "Battery Level",
-    "battery_power": "Battery Power",
-    "battery_report": "Batteries Report",
-    "batteryserialnumber": "Battery Serial Number",
-    "cellvoltage": "Cell Voltage Levels",
-    "charging": "Charging",
-    "charging_watt": "Charging at ",
-    "combined_sys_load": "Combined System Load",
+    "ac_power": "Alimentation secteur",
+    "active_profile": "Profil de puissance active",
+    "acwake": "Réveil AC",
+    "adapter": "Adaptateur secteur",
+    "adapter_id": "ID Adapteur",
+    "adapter_serial_number": "Numéro de série adaptateur",
+    "adapter_wattage": "Puissance de l'adaptateur",
+    "amperage": "Ampérage",
+    "amps": "Ampères",
+    "applepushservicetask": "Tâche du service Push Apple",
+    "assertions": "Assertions de puissance",
+    "auto_gpu": "Automatique",
+    "autopoweroff": "Arrêt automatique",
+    "autopoweroffdelay": "Délai d'extinction automatique",
+    "autorestart": "Redémarrage auto",
+    "avgtimetoempty": "Estimation du temps moyen restant",
+    "avgtimetofull": "Temps moyen de recharge",
+    "backgroundtask": "Tâche d'arrière-plan",
+"batteries": "Batteries",
+    "battery": "Batterie",
+    "battery_level": "Niveau de batterie",
+    "battery_power": "Puissance batteie",
+    "battery_report": "Rapport Batterie",
+    "batteryserialnumber": "Numéro de série batterie",
+    "cellvoltage": "Niveau de tension cellulaire",
+    "charging": "En charge",
+    "charging_watt": "Chargé à ",
+    "combined_sys_load": "Charge combinée du système",
     "condition": "Condition",
-    "cpu_available_cpus": "Available CPUs",
-    "cpu_scheduler_limit": "CPU Scheduler Limit",
-    "cpu_speed_limit": "CPU Speed Limit",
+    "cpu_available_cpus": "CPUs disponibles",
+    "cpu_scheduler_limit": "Limite planificateur CPU",
+    "cpu_speed_limit": "Vitesse limite du CPU",
     "current_capacity": "Charge restante",
     "current_percent": "Chargée %",
     "cycle_count": "Nombre de cycles",
     "dark_wake_count": "Dark Wake Count",
     "design_capacity": "Capacité prévue",
-    "designcyclecount": "Design Cycle Count",
-    "destroyfvkeyonstandby": "Destroy FileVault Keys on Standby",
-    "destroyfvkeyonstandby_short": "Destroy FV Keys on Standby",
-    "discharging": "Discharging",
-    "discharging_watt": "Discharging at",
-    "discreet": "Discreet GPU",
-    "disksleep": "Disk Sleep",
-    "displaysleep": "Display Sleep",
-    "externalconnected": "Power Adapter Connected",
-    "externalmedia": "External Media",
-    "family_code": "Adaptr Family Code",
-    "fullycharged": "Fully Charged",
-    "general_info": "General Information",
+    "designcyclecount": "Compteur de cycles prévus",
+    "destroyfvkeyonstandby": "Destruction des clés FileVault en mode veille",
+    "destroyfvkeyonstandby_short": "Destruction des clés FV en mode veille",
+    "discharging": "Déchargement",
+    "discharging_watt": "Déchargement à",
+    "discreet": "GPU discret",
+    "disksleep": "Disque en sommeil",
+    "displaysleep": "Ecran en veille",
+    "externalconnected": "Adaptateur secteur connecté",
+    "externalmedia": "Media externe",
+    "family_code": "Code famille adaptateur",
+    "fullycharged": "Chargée",
+    "general_info": "Information générale",
     "gpuswitch": "GPU",
-    "halfdim": "Reduce Brigtness on Battery",
-    "haltafter": "UPS Shut Down/Sleep After",
-    "haltlevel": "UPS Shut Down/Sleep Level",
-    "haltremain": "UPS Shut Down/Sleep with % Remaining",
-    "hibernate": "Hibernate",
-    "hibernatefile": "Hibernate File Path",
-    "hibernatemode": "Hibernate Mode",
-    "instanttimetoempty": "Estimated Instant Time To Empty",
-    "integrated": "Integrated GPU",
-    "ischarging": "Is Charging",
+    "halfdim": "Réduire la luminosité",
+    "haltafter": "UPS Arrêté/En sommeil après",
+    "haltlevel": "UPS Arrêté/Niveau de sommeil",
+    "haltremain": "UPS Arrêté/En sommeil avec % restant",
+    "hibernate": "Hibernation",
+    "hibernatefile": "Chemin du fichier d'hibernation",
+    "hibernatemode": "Mode Hibernation",
+    "instanttimetoempty": "Temps estimé instantané restant",
+    "integrated": "GPU intégré",
+    "ischarging": "est chargé",
     "lidwake": "Lid Wake",
     "listing": {
         "capacity": "Capacité (mAh)",
@@ -72,53 +73,53 @@
         "manufactured": "Fabriquée"
     },
     "manufacture_date": "Fabriquée",
-    "manufacturer": "Battery Manufacturer",
+    "manufacturer": "Fabricant batterie",
     "max_capacity": "Capacité pleine charge",
     "max_percent": "Santé %",
     "minute": "minute",
     "minutes": "minutes",
-    "networkclientactive": "Network Client Active",
+    "networkclientactive": "Client réseau actif",
     "networkoversleep": "Network Over Sleep",
-    "never": "Never",
-    "packreserve": "Battery Reserve Power",
-    "permanentfailurestatus": "Battery Has Permanently Failed",
+    "never": "Jamais",
+    "packreserve": "Réserve de puissance de la batterie",
+    "permanentfailurestatus": "La batterie ne fonctionne plus",
     "power": "Alimentation",
-    "power_settings": "Power Settings",
+    "power_settings": "Réglages de puissance",
     "powernap": "Power Nap",
-    "preventsystemsleep": "Prevent System Sleep",
-    "preventuseridledisplaysleep": "Prevent User Idle Display Sleep",
-    "preventuseridlesystemsleep": "Prevent User Idle System Sleep",
-    "report": "Power Report",
-    "safe_sleep": "Safe Sleep",
-    "schedule": "Repeating Scheduled Events",
-    "second": "second",
-    "seconds": "seconds",
-    "sleep": "Sleep",
-    "sleep_count": "Sleep Counts Since Boot",
-    "sleep_on_power_button": "Sleep on Power Button",
-    "sleep_prevented_by": "Sleep Prevented By",
+    "preventsystemsleep": "Empêcher la mise en sommeil du système",
+    "preventuseridledisplaysleep": "Empêcher la mise en sommeil de l'écran de l'utilisateur",
+    "preventuseridlesystemsleep": "Empêcher la mise en sommeil du système de l'utilisateur",
+    "report": "Rapport Puissance",
+    "safe_sleep": "Sommeil sûr",
+    "schedule": "Répétition des évènements programmés",
+    "second": "seconde",
+    "seconds": "secondes",
+    "sleep": "Sommeil",
+    "sleep_count": "Compteurs de mise en sommeil depuis le démarrage",
+    "sleep_on_power_button": "Mise en sommeil via le bouton d'allumage",
+    "sleep_prevented_by": "Mise en sommeil empéchées par",
     "sms": "Sudden Motion Sensor",
     "sms_short": "SMS",
-    "standby": "Standby",
-    "standbydelay": "Standby Delay",
+    "standby": "Veille",
+    "standbydelay": "Délai de veille",
     "temperature": "Température",
-    "thermal_level": "Thermal Level",
-    "thermal_load": "Thermal Load",
-    "timeremaining": "Estimated Time Remaining",
-    "ttyskeepawake": "TTY Keep Awake",
-    "ups_charging_status": "UPS Charging Status",
-    "ups_name": "UPS Name",
-    "ups_percent": "UPS Charge Level",
-    "ups_status": "UPS Status",
-    "user_sys_load": "User System Load",
+    "thermal_level": "Niveau thermique",
+    "thermal_load": "Charge thermique",
+    "timeremaining": "Temps estimé restant",
+    "ttyskeepawake": "TTY Rester éveillé",
+    "ups_charging_status": "Etat de chargement UPS",
+    "ups_name": "Nom UPS",
+    "ups_percent": "Niveau de charge UPS",
+    "ups_status": "Etat UPS",
+    "user_sys_load": "Chage système utilisateur",
     "user_wake_count": "User Wake Count",
-    "userisactive": "User is Active",
-    "voltage": "Battery Voltage Level",
+    "userisactive": "Utilisateur est actif",
+    "voltage": "Niveau de tension de la batterie ",
     "volts": "Volts",
-    "wattage": "Wattage",
+    "wattage": "Puissance",
     "watts": "Watts",
     "widget": {
-        "battery": "Battery",
+        "battery": "Batterie",
         "check": "Test de la batterie",
         "health": {
             "title": "Etat de santé de la batterie",
