--- a/app/modules/directory_service/locales/en.json
+++ b/app/modules/directory_service/locales/en.json
@@ -9,13 +9,12 @@
     "notbound": "Not Bound",
     "info": "Totals since this data is being collected",
     "bound_title": "Bound to a Directory Service",
-    "boundstatus": "Bound Staus",
+    "boundstatus": "Bound Status",
     "clienttabtitle": "Directory Service",
     "which_directory_service": "Directory Service Used",
     "directory_service_comments": "Active Directory Comments",
     "adforest": "Active Directory Forest",
     "addomain": "Active Directory Domain",
-    "computeraccount": "Computer Account",
     "user_experience": "Advanced Options - User Experience",
     "createmobileaccount": "Create Mobile Account at Login",
     "requireconfirmation": "Require Confirmation",
