--- a/app/modules/appusage/locales/fr.json
+++ b/app/modules/appusage/locales/fr.json
@@ -9,5 +9,5 @@
     "launch": "Lancer",
     "quit": "Quitter",
     "title": "Utilisation Applications",
-    "tooltip": "Application les plus utilisées",
+    "tooltip": "Application les plus utilisées"
 }
