Update fr.json (#792)
* Update fr.json

Some spelling corrections

* Update fr.json

--- a/app/modules/appusage/locales/fr.json
+++ b/app/modules/appusage/locales/fr.json
@@ -1,15 +1,13 @@
 {
     "activation": "Activation",
     "appname": "Nom Applications",
-    "appusage": "Usage Applications",
-    "appusagereport": "Rapport Usage Applications",
+    "appusage": "Utilisation Applications",
+    "appusagereport": "Utilisation Applications",
     "count": "Compteur",
     "event": "Evènement",
     "lastevent": "Dernier évènement",
     "launch": "Lancer",
     "quit": "Quitter",
-    "title": "Application Usage",
-    "tooltip": "Most frequently used apps",
-    "title": "Usages Applications",
-    "tooltip": "Applications les plus utilisées"
+    "title": "Utilisation Applications",
+    "tooltip": "Application les plus utilisées"
 }
