--- a/app/modules/profile/locales/fr.json
+++ b/app/modules/profile/locales/fr.json
@@ -2,6 +2,6 @@
     "payload": "Payloads",
     "profile": "Profils",
     "profilename": "Nom du profil",
-    "payloadname": "Payload Name",
-    "report": "Profile Report"
+    "payloadname": "Nom Payload",
+    "report": "Profils"
 }
