--- a/app/modules/security/locales/fr.json
+++ b/app/modules/security/locales/fr.json
@@ -1,13 +1,15 @@
 {
     "ard_users": "Utilisateurs ARD",
-    "firmwarepw": "Mot de passe firmware",
+    "block_all": "Bloquer tout",
+    "firewall_state": "Etat Firewall",
+    "firmwarepw": "Mot de passe Firmware",
     "gatekeeper": "Etat Gatekeeper",
-    "gatekeeper_active": "Gatekeeper sctif",
+    "gatekeeper_active": "Gatekeeper activé",
     "gatekeeper_disabled": "Gatekeeper désactivé",
-    "report": "Rapport Sécurité",
+    "report": "Sécurité",
     "security": "Sécurité",
     "sip": "Etat SIP",
-    "sip_active": "SIP actif",
+    "sip_active": "SIP activé",
     "sip_disabled": "SIP désactivé",
     "sip_status": "Etat SIP",
     "ssh_users": "Utilisateurs SSH"
