Move drive overall health

--- a/app/modules/smart_stats/locales/en.json
+++ b/app/modules/smart_stats/locales/en.json
@@ -118,5 +118,6 @@
     "error_count": "SMART Errors Count",
     "smart_support_is": "SMART Enabled",
     "smart_is": "SMART Status",
-    "overall_health": "Overall Health"
+    "overall_health": "Overall Health",
+    "passed": "Passed"
 }
