--- a/app/modules/security/locales/en.json
+++ b/app/modules/security/locales/en.json
@@ -12,5 +12,6 @@
     "sip_active": "SIP Active",
     "sip_disabled": "SIP Disabled",
     "sip_status": "SIP Status",
-    "ssh_users": "SSH Users"
+    "ssh_users": "SSH Users",
+    "skel": "Secure Kext Loading"
 }
