clean up typos in controller in firmwarepw from bad copy-paste. fix bad skel code in both model and controller. make widget blue for both.

--- a/app/modules/security/locales/en.json
+++ b/app/modules/security/locales/en.json
@@ -13,5 +13,9 @@
     "sip_disabled": "SIP Disabled",
     "sip_status": "SIP Status",
     "ssh_users": "SSH Users",
-    "skel": "Secure Kext Loading"
+    "skel": {
+        "kext-loading": "KEXT Loading",
+        "all-approved": "Open",
+        "user-approved": "User Approved"
+    }
 }
