--- a/app/modules/smart_stats/locales/en.json
+++ b/app/modules/smart_stats/locales/en.json
@@ -119,5 +119,26 @@
     "smart_support_is": "SMART Enabled",
     "smart_is": "SMART Status",
     "overall_health": "Overall Health",
+    "model_number": "Model Number",
+    "pci_vender_subsystem_id": "PCI Vendor/Subsystem ID",
+    "critical_warning": "Critical Warning",
+    "available_spare": "Available Spare",
+    "available_spare_threshold": "Available Spare Threshold",
+    "percentage_used": "Percentage Used",
+    "data_units_read": "Data Units Read",
+    "data_units_written": "Data Units Written",
+    "host_read_commands": "Host Read Commands",
+    "host_write_commands": "Host Write Commands",
+    "controller_busy_time": "Controller Busy Time",
+    "unsafe_shutdowns": "Unsafe Shutdowns",
+    "media_data_integrity_errors": "Media Data Integrity Errors",
+    "error_info_log_entries": "Error Information Log Entries",
+    "ieee_oui_id": "IEEE OUI ID",
+    "controller_id": "Controller ID",
+    "number_of_namespaces": "Number of Namespaces",
+    "firmware_updates": "Firmware Updates",
+    "optional_admin_commands": "Optional Admin Commands",
+    "optional_nvm_commands": "Options NVM Commands",
+    "max_data_transfer_size": "Maximum Data Transfer Size",
     "passed": "Passed"
 }
