--- a/app/modules/smart_stats/locales/en.json
+++ b/app/modules/smart_stats/locales/en.json
@@ -89,6 +89,7 @@
     "lifetime_reads_gib": "Lifetime Reads GiB",
     "uncorrectable_error_cnt": "Uncorrectable Error Count",
     "ecc_error_rate": "ECC Error Rate",
+    "ecc_error_eate": "ECC Error Rate",
     "crc_error_count": "CRC Error Count",
     "supercap_status": "Supercap Status",
     "exception_mode_status": "Exception Mode Status",
@@ -96,7 +97,7 @@
     "total_reads_gib": "Total Reads GiB",
     "total_writes_gib": "Total Writes GiB",
     "thermal_throttle": "Thermal Throttle",
-    "perc_writeerase_Count": "Percent Write Erase Count",
+    "perc_writeerase_count": "Percent Write Erase Count",
     "perc_avail_resrvd_space": "Percent Available Reserved Space",
     "perc_writeerase_ct_bc": "Percent Write Erase Count Blocks",
     "sata_phy_error": "SATA PHY Error",
@@ -140,5 +141,8 @@
     "optional_admin_commands": "Optional Admin Commands",
     "optional_nvm_commands": "Options NVM Commands",
     "max_data_transfer_size": "Maximum Data Transfer Size",
+    "temperature_nvme": "Temperature",
+    "power_on_hours_nvme": "Power on Hours",
+    "power_cycle_count_nvme": "Power Cycle Count",
     "passed": "Passed"
 }
