add a few migrations. add database item to the admin menu add new locale item system.database.menu_link

--- a/public/assets/locales/en.json
+++ b/public/assets/locales/en.json
@@ -332,7 +332,10 @@
     "success": "Success",
     "system": {
         "status": "Munkireport System Status",
-        "system": "System"
+        "system": "System",
+        "database": {
+            "menu_link": "Database"
+        }
     },
     "systemstatus": {
         "menu_link": "Show System Status"
