--- a/app/modules/disk_report/locales/en.json
+++ b/app/modules/disk_report/locales/en.json
@@ -20,7 +20,7 @@
     "storage": "Storage",
     "total_size": "Size",
     "type": "Storage Type",
-    "filesystem_temp": "Filesystem Type",
+    "filesystem_type": "Filesystem Type",
     "used": "Used",
     "volume_type": "Volume Type",
     "report": "Storage Report",
