Added Dashboard widget Added Status to client data (Clean/Infected) which is searchable

--- a/app/modules/detectx/locales/fr.json
+++ b/app/modules/detectx/locales/fr.json
@@ -4,5 +4,6 @@
     "clienttab": "DetectX",
     "issues": "Issues",
     "numberofissues": "Number of Issues",
-    "searchdate": "Search Date"
+    "searchdate": "Search Date",
+    "status":"Status"
 }
