Added better localization support for listing and widget Tab for DetectX module uses the listing headers. Fixed lacking localization for widget. Added FA icon to Widget to match the style Removed old outdated fr.json locale.

--- a/app/modules/detectx/locales/en.json
+++ b/app/modules/detectx/locales/en.json
@@ -1,4 +1,5 @@
 {
+  "listing":{
     "reporttitle": "DetectX Report",
     "clienttitle": "DetectX",
     "clienttab": "DetectX",
@@ -6,4 +7,11 @@
     "numberofissues": "Number of Issues",
     "searchdate": "Search Date",
     "status": "Status"
+},
+"widget": {
+    "title": "DetectX Status",
+    "clean": "Clean",
+    "infected": "Infected"
+},
+"title":"DetectX"
 }
