Updated listing + tab for localization support (Thanks @tuxudo !) Updated model for new data

--- a/app/modules/detectx/locales/en.json
+++ b/app/modules/detectx/locales/en.json
@@ -1,12 +1,15 @@
 {
   "listing": {
-    "reporttitle": "DetectX Report",
-    "clienttitle": "DetectX",
-    "clienttab": "DetectX",
-    "issues": "Issues",
     "numberofissues": "Number of Issues",
     "searchdate": "Search Date",
-    "status": "Status"
+    "status": "Status",
+    "issues":"Issues",
+    "noissues": "No Issues Found!",
+    "clean":"Clean",
+    "true":"True",
+    "false":"False",
+    "scantime": "Scan Duration",
+    "spotlightindexing": "Spotlight Indexing"
   },
   "widget": {
     "title": "DetectX Status",
