Added local APFS snapshots

--- a/app/modules/timemachine/locales/en.json
+++ b/app/modules/timemachine/locales/en.json
@@ -37,6 +37,7 @@
     "timemachine": "Time Machine",
     "timemachinewidget": "Time Machine Backups",
     "report": "Time Machine Report",
+    "apfs_snapshots": "Local APFS Snapshots",
     "null": "",
     "0": "Backup completed successfully",
     "1": "Error 1: Unable to launch Time Machine.",
