General fixes to UI and logic

--- a/app/modules/fan_temps/locales/en.json
+++ b/app/modules/fan_temps/locales/en.json
@@ -48,8 +48,42 @@
     "fan_6": "Fan 6",
     "fan_7": "Fan 7",
     "fan_8": "Fan 8",
+    "shutdown5_short": "5 - User Initiated",
+    "shutdown3_short": "3 - Power Switch Initiated",
+    "shutdown2_short": "2 - Low Battery",
+    "shutdown1_short": "1 - Temperature Over Limit",
+    "shutdown0_short": "0 - Inital Value",
+    "shutdown_1_short": "-1 - Health Check",
+    "shutdown_2_short": "-2 - Power Supply Issue",
+    "shutdown_3_short": "-3 - Temperature Exceeded",
+    "shutdown_4_short": "-4 - Sensor or Fan Issue",
+    "shutdown_30_short": "-30 - Temperature Over Limit",
+    "shutdown_40_short": "-40 - PSWRSMRST",
+    "shutdown_50_short": "-50 - Unmapped (Deprecated)",
+    "shutdown_60_short": "-60 - Low Battery or Bad Master Directory Block",
+    "shutdown_61_short": "-61 - Watchdog Timer",
+    "shutdown_62_short": "-62 - Watchdog Timer",
+    "shutdown_70_short": "-70 - Temperature Palm Rest",
+    "shutdown_71_short": "-71 - Temperature SODIMM",
+    "shutdown_72_short": "-72 - Temperature Heatpipe",
+    "shutdown_74_short": "-74 - Temperature Battery",
+    "shutdown_75_short": "-75 - Power Adapter Problem",
+    "shutdown_76_short": "-76 - Temperature Manual",
+    "shutdown_78_short": "-78 - Adapter Current",
+    "shutdown_79_short": "-79 - Battery Current",
+    "shutdown_82_short": "-82 - Temperature Skin",
+    "shutdown_83_short": "-83 - Temperature Skin",
+    "shutdown_84_short": "-84 - Temperature Backup",
+    "shutdown_86_short": "-86 - Temperature CPU Proxi",
+    "shutdown_95_short": "-95 - Temperature CPU",
+    "shutdown_100_short": "-100 - Temperature PS",
+    "shutdown_101_short": "-101 - Temperature LCD",
+    "shutdown_102_short": "-102 - RSM Power Fail",
+    "shutdown_103_short": "-103 - Battery Under Voltage",
+    "shutdown_127_short": "-127 - Power Switch Forced Shutdown",
+    "shutdown_128_short": "-128 - Unknown",
     "shutdown5": "User Initiated",
-    "shutdown3": "Power Switch Forced",
+    "shutdown3": "Power Switch Initiated",
     "shutdown2": "Low Battery",
     "shutdown1": "Temperature Over Limit",
     "shutdown0": "Inital Value",
@@ -67,7 +101,7 @@
     "shutdown_71": "Temperature SODIMM",
     "shutdown_72": "Temperature Heatpipe",
     "shutdown_74": "Temperature Battery",
-    "shutdown_75": "Power Adapter",
+    "shutdown_75": "Power Adapter Problem",
     "shutdown_76": "Temperature Manual",
     "shutdown_78": "Adapter Current",
     "shutdown_79": "Battery Current",
@@ -87,7 +121,6 @@
     "ninja_2": "Force Restart",
     "ninja_3": "Force Startup",
     "ninja_4": "Reserved",
-
     "ta0p": "Ambient Air 0",
     "ta1p": "Ambient Air 1",
     "tc0d": "CPU Diode",
