Extensions TeamID breakout

--- a/app/modules/extensions/locales/en.json
+++ b/app/modules/extensions/locales/en.json
@@ -9,5 +9,6 @@
     "bundle_id": "Bundle ID",
     "version": "Version",
     "codesign": "Codesign Cert",
-    "report": "Extensions Report"
+    "report": "Extensions Report",
+    "teamid": "Team Identifier"
 }
