Rename 'codesign' to 'developer' for consistency's sake

--- a/app/modules/extensions/locales/en.json
+++ b/app/modules/extensions/locales/en.json
@@ -8,7 +8,7 @@
     "executable": "Executable",
     "bundle_id": "Bundle ID",
     "version": "Version",
-    "codesign": "Codesign Cert",
+    "developer": "Developer",
     "report": "Extensions Report",
     "teamid": "Team Identifier"
 }
