Expanded to include memory usage and swap info

--- a/app/modules/memory/locales/en.json
+++ b/app/modules/memory/locales/en.json
@@ -1,7 +1,10 @@
 {
     "clienttab": "Memory",
+    "clienttab_ram": "RAM",
     "reporttitle": "Memory Report",
+    "reporttitle_ram": "RAM Report",
     "report": "Memory Report",
+    "report_ram": "RAM Report",
     "name": "Name",
     "dimm_size": "Size",
     "dimm_speed": "Speed",
@@ -16,6 +19,34 @@
     "ecc_enabled": "Enabled",
     "ecc_disabled": "Disabled",
     "ok": "OK",
+    "free": "Free",
+    "active": "Active",
+    "inactive": "Inactive",
+    "speculative": "Speculative",
+    "throttled": "Throttled",
+    "wireddown": "Wired Down",
+    "purgeable": "Purgeable",
+    "translationfaults": "Translation faults",
+    "copyonwrite": "Copy-on-write",
+    "zerofilled": "Zero Filled",
+    "reactivated": "Reactivated",
+    "purged": "Purged",
+    "filebacked": "File-backed",
+    "anonymous": "Anonymous",
+    "storedincompressor": "Stored in Compressor",
+    "occupiedbycompressor": "Occupied by Compressor",
+    "decompressions": "Decompressed",
+    "compressions": "Compressed",
+    "pageins": "Page Ins",
+    "pageouts": "Page Outs",
+    "swapins": "Swap Ins",
+    "swapouts": "Swap Outs",
+    "memorypressure": "Memory Pressure",
+    "swaptotal": "Swap Total",
+    "swapused": "Swap Used",
+    "swapfree": "Swap Free",
+    "swap": "Swap",
+    "swapencrypted": "Swap Encrypted",
     "empty": "Empty",
     "ecc_errors": "ECC Errors Detected"
 }
