Add DNS to network report
How was this not already in there? Should probably be rewritten to
output as a plist

--- a/app/modules/network/locales/en.json
+++ b/app/modules/network/locales/en.json
@@ -2,6 +2,7 @@
     "ethernet": "Ethernet",
     "hostname": "Hostname",
     "ip_address": "IP Address",
+    "dns": "DNS",
     "mask": "Mask",
     "network": "Network",
     "prefix_length": "Prefix Length",
