Add search domain to collected data

--- a/app/modules/network/locales/en.json
+++ b/app/modules/network/locales/en.json
@@ -4,6 +4,7 @@
     "ip_address": "IP Address",
     "automatic": "Automatic",
     "dns": "DNS",
+    "searchdomain": "Search Domain",
     "mask": "Mask",
     "network": "Network",
     "manual": "Manual",
