Fixed memory object localization problem

--- a/public/assets/locales/de.json
+++ b/public/assets/locales/de.json
@@ -224,7 +224,7 @@
             "title": "Uptime"
         }
     },
-    "memory": "Speicher",
+    "memory_physical": "Speicher",
     "model": "Modell",
     "mouse": "Maus",
     "munki": {
