--- a/public/assets/locales/en.json
+++ b/public/assets/locales/en.json
@@ -231,7 +231,7 @@
             "title": "Uptime"
         }
     },
-    "memory": "Memory",
+    "memory_physical": "Memory",
     "model": "Model",
     "mouse": "Mouse",
     "munki": {
