Add Issues/warning button
Added an orange/issues warning button in addition to the
infections/danger button and move clean/success green button to the
right so the colours appear similar to other widgets.

--- a/app/modules/detectx/locales/de.json
+++ b/app/modules/detectx/locales/de.json
@@ -10,10 +10,13 @@
     "false": "False",
     "scantime": "Scandauer",
     "spotlightindexing": "Spotlight Index"
+    "infections": "Infections",
+    "registered": "Registered"
   },
   "widget": {
     "title": "DetectX status",
     "clean": "Sauber",
+    "issues": "Issues",
     "infected": "Infiziert"
   },
   "title": "DetectX"
